@@ -1,3 +1,8 @@
+2005-10-14  Rodney Dawes  <dobey@novell.com>
+
+	* legacy-icon-mapping.xml: Add more KDE links. Patch from Niko Mirthes
+	Add link for gnome-lockscreen to the system-lock-screen icon
+
 2005-10-13  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Up version to 0.3.0 for release
